Fix overflow on reset password page

--- a/views/styles/reset-password.css
+++ b/views/styles/reset-password.css
@@ -6,13 +6,15 @@
 
 #reset-block {
   grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
+  grid-row: 1 / span 1;
   justify-self: center;
   margin-left: auto;
   margin-right: auto;
   height: 100%;
   min-width: 380px;
   width: 70%;
+  vertical-align: middle;
+  margin-top: 10%;
 }
 
 #reset-block p {
@@ -20,12 +22,12 @@
 }
 
 #reset-block>form {
-  height: 20rem;
   display: flex;
   flex-direction: column;
   /* size in rem so form scales with font size. */
   gap: 3px;
   align-items: center;
+  overflow: hidden;
 }
 
 #username-block,
@@ -40,10 +42,6 @@
 .new-pwd > input,
 .new-pwd-v > input {
     width: 90%;
-}
-
-#new-password-block {
-  margin: 50px 0;
 }
 
 #new-password-block::before {
